--- a/.github/workflows/prd.yaml
+++ b/.github/workflows/prd.yaml
@@ -40,6 +40,8 @@ jobs:
         run: echo "DEPLOY_VERSION=${{ inputs.use-latest && steps.semver.outputs.tag || inputs.version }}" >> "$GITHUB_ENV"
       - name: Generate job summary version to deploy
         run: |
+          echo IMAGE_REPO=$(echo $IMAGE_REPO | tr '[:upper:]' '[:lower:]') >> $GITHUB_ENV
+          echo IMAGE_NAME=$(echo $IMAGE_NAME | tr '[:upper:]' '[:lower:]') >> $GITHUB_ENV
           echo "This GitHub Actions is going to deploy ${{ env.IMAGE_NAME }} to version ${{ env.DEPLOY_VERSION }}" >> $GITHUB_STEP_SUMMARY
     outputs:
       image_tag: ${{ env.DEPLOY_VERSION }}
