--- a/.github/workflows/tagging.yaml
+++ b/.github/workflows/tagging.yaml
@@ -24,6 +24,9 @@ jobs:
       packages: write
       contents: write
     steps:
+      - name: Normal env
+        run: |
+          echo "IMAGE_NAME_NORMAL=$(echo $IMAGE_NAME | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
       - name: Checkout
         uses: actions/checkout@v4
         with:
@@ -38,7 +41,7 @@ jobs:
           DEFAULT_BUMP: ${{ inputs.bump }}
       - name: Generate job summary version to tag
         run: |
-          echo "This GitHub Actions is going to tag container image ${{ env.IMAGE_NAME }} from edge to version ${{ steps.semver.outputs.new_tag }}" >> $GITHUB_STEP_SUMMARY
+          echo "This GitHub Actions is going to tag container image ${{ env.IMAGE_NAME_NORMAL }} from edge to version ${{ steps.semver.outputs.new_tag }}" >> $GITHUB_STEP_SUMMARY
       - name: Login to Container Registry
         uses: docker/login-action@v3
         with:
@@ -48,7 +51,7 @@ jobs:
       - name: Setup Crane
         uses: imjasonh/setup-crane@v0.4
       - name: Copy Docker Image from edge to production
-        run: crane copy ${{ env.IMAGE_NAME }}:edge ${{ env.IMAGE_NAME }}:${{ steps.semver.outputs.new_tag }}
+        run: crane copy ${{ env.IMAGE_NAME_NORMAL }}:edge ${{ env.IMAGE_NAME_NORMAL }}:${{ steps.semver.outputs.new_tag }}
       - name: Create GitHub Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
